--- a/ngin-proxy/docker-compose.yml
+++ b/ngin-proxy/docker-compose.yml
@@ -3,22 +3,26 @@ services:
 
   nginx-proxy:
     image: jwilder/nginx-proxy
-    container_name: my-app-proxy
+    container_name: nginx-proxy
     ports:
-      - "80:80"
-      - "443:443"
+        - "80:80"
+        - "443:443"
     volumes:
-      - "/etc/nginx/vhost.d"
-      - "/usr/share/nginx/html"
-      - "/var/run/docker.sock:/tmp/docker.sock:ro"
-      - "/etc/nginx/certs"
+        - certs:/etc/nginx/certs:ro
+        - vhostd:/etc/nginx/vhost.d
+        - html:/usr/share/nginx/html
+        - /var/run/docker.sock:/tmp/docker.sock:ro
 
   letsencrypt-nginx-proxy-companion:
     image: jrcs/letsencrypt-nginx-proxy-companion
+    container_name: letsencrypt-nginx-proxy-companion
+    environment:
+        - NGINX_PROXY_CONTAINER=nginx-proxy
     volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-    volumes_from:
-      - "nginx-proxy"
+        - certs:/etc/nginx/certs
+        - vhostd:/etc/nginx/vhost.d
+        - html:/usr/share/nginx/html
+        - /var/run/docker.sock:/var/run/docker.sock:ro
 
 networks:
   default:
