--- a/ngin-proxy/docker-compose.yml
+++ b/ngin-proxy/docker-compose.yml
@@ -8,6 +8,8 @@ services:
         - "80:80"
     volumes:
         - vhostd:/etc/nginx/vhost.d
+        - html:/usr/share/nginx/html
+        - /var/run/docker.sock:/tmp/docker.sock:ro
 
 volumes: 
     certs:
