--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,6 +16,6 @@ services:
             LETSENCRYPT_EMAIL: kotoulas.marios@gmail.com
 
 networks:
-    nginx-proxy:
+    default:
         external:
             name: nginx-proxy
