--- a/ngin-proxy/docker-compose.yml
+++ b/ngin-proxy/docker-compose.yml
@@ -1,22 +1,26 @@
-version: "3.5"
+version: "2"
 services:
 
   nginx-proxy:
     image: jwilder/nginx-proxy
-    container_name: nginx-proxy
+    container_name: my-app-proxy
     ports:
-        - "80:80"
+      - "80:80"
+      - "443:443"
     volumes:
-        - vhostd:/etc/nginx/vhost.d
-        - html:/usr/share/nginx/html
-        - /var/run/docker.sock:/tmp/docker.sock:ro
+      - "/etc/nginx/vhost.d"
+      - "/usr/share/nginx/html"
+      - "/var/run/docker.sock:/tmp/docker.sock:ro"
+      - "/etc/nginx/certs"
 
-volumes: 
-    certs:
-    html:
-    vhostd:
+  letsencrypt-nginx-proxy-companion:
+    image: jrcs/letsencrypt-nginx-proxy-companion
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
+    volumes_from:
+      - "nginx-proxy"
 
 networks:
-    nginx-proxy:
-        external:
-            name: nginx-proxy
+  default:
+    external:
+      name: nginx-proxy
