--- a/ngin-proxy/docker-compose.yml
+++ b/ngin-proxy/docker-compose.yml
@@ -15,6 +15,8 @@ services:
 
   letsencrypt-nginx-proxy-companion:
     image: jrcs/letsencrypt-nginx-proxy-companion
+    depends_on:
+      - “nginx-proxy”
     volumes:
       - certs:/etc/nginx/certs:rw
       - vhost:/etc/nginx/vhost.d
