--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.5'
 
 services:
     web:
-        image: nginx
+        image: nginx:1.19
         container_name: web
         hostname: web
         restart: unless-stopped
