--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,9 +7,11 @@ services:
         hostname: web
         restart: unless-stopped
         ports:
-            - 8080:80
+            - "8080:80"
         volumes:
-            - ../src/web:/usr/share/nginx/html
+            - type: bind
+              source: ../src/web
+              target: /usr/share/nginx/html
         environment:
             VIRTUAL_HOST: mk-lab.eu
             LETSENCRYPT_HOST: mk-lab.eu
