--- a/src/api/.env
+++ b/src/api/.env
@@ -2,6 +2,7 @@ APP_NAME=api
 APP_ENV=local
 APP_DEBUG=true
 APP_URL=http://localhost:8081
+APP_KEY=base64:IviWox6hmsd1Dli2zyFLEux2WotMGfbuyxzVi2ZU9vg=
 
 DB_CONNECTION=pgsql
 DB_HOST=api-postgres
